# magic_turtles

./: CMakeLists.txt  README.md  package.xml
launch/: turtles.launch
msg/: Turtle.msg
scripts/: send_turtle.py
src/: receive_turtle.cpp
